--- a/public/styles.css
+++ b/public/styles.css
@@ -27,7 +27,10 @@ a{
      background-color: var(--secondary-color);
     
 }
-
+.mango-logo{
+  height: 30px;
+  width: 30px;
+}
 .nav-logo {
      font-family: 'Yanone Kaffeesatz', sans-serif;
      font-size: 28px;
@@ -270,14 +273,14 @@ label {
 }
 .form-div {
      box-shadow: 2px 2px 4px 2px rgb(0, 0, 0, 0.4);
-     width: 40%;
+     width: 45%;
      margin-left: auto;
      margin-right: auto;
      display: flex;
      justify-content: center;
      height: 750px;
 }
-.create-form h2 {
+.create-div h2 {
      text-align : center;  
 }
 .form-div textarea {
