--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -159,10 +159,15 @@ a{
       box-shadow: 1px 2px 2px 1px rgba(63, 48, 48, 0.3);
       transition-duration: 0.2s;
 }
-.contribute-button{
+#contribute-amount {
+     margin-bottom: 10px;
+     margin-top: 10px;
+     width: 60%;
+}
+#contribute-button{
       background-color: var(--accent-color) ;
 }
-.contribute-button:hover{
+#contribute-button:hover{
 
       box-shadow: 1px 2px 4px 2px rgb(0, 0, 0, 0.5);
 }
@@ -222,7 +227,7 @@ a {
      display: flex;
      justify-content: space-between;
    }
-   #duration {
+   .duration-wrapper .goal {
      margin-left: 185px;
      
     
@@ -278,7 +283,7 @@ label {
      margin-right: auto;
      display: flex;
      justify-content: center;
-     height: 750px;
+     height: max-content;
 }
 .create-div h2 {
      text-align : center;  
@@ -294,6 +299,7 @@ label {
      width: 100%;
      height: 40px;
      margin-top: 40px;
+     margin-bottom: 40px;
      cursor: pointer;
      font-family: 'Rubik', sans-serif;
      font-weight: bold;
@@ -302,6 +308,7 @@ label {
      background-color: rgb(37, 225, 238);
      border-radius: 10px;  
      border-style: solid;  
+
 }
 .form-div button:hover {
     background-color: var(--accent-color);
