--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
 :root {
     --mango-theme : #ff8100;
     --font-color : whitesmoke;
@@ -167,11 +168,12 @@ hr {
 .container img {
     width: 100px;
     height: 100px;
+
     
 }
 .card{
     display: inline-block;
-    align-items: center;
+    text-align: center;
     background-color:black;
     width: 25%;
     margin-left: 43px;
@@ -232,3 +234,68 @@ ul li {
     background-color: turquoise;
    
 }
+/* Community */
+.community-div {
+  text-align: center;
+  margin-top: 100px ;
+}
+.cards{
+    margin-top: 50px;
+}
+.community-div p {
+    font-size: 17px;
+}
+.card1 {
+    background-color: rgba(252, 252, 252, 0.6);
+    color: black;
+    display: inline-block;
+    align-items: center;
+    width: 20%;
+    margin-left: 43px;
+    height: max-content;
+    padding: 20px;
+    border-radius: 20px;
+   
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
+    cursor: pointer;
+    transition-duration: 0.3s;
+}
+.card1:hover {
+   transform: translate(5px, 2px);
+   box-shadow:0 3px 5px 0 rgba(0,0,0,0.49);
+}
+.card1 img {
+ height: 75px;
+ width : 75px;
+ box-shadow: rgba(0,0,0,0.5);
+}
+.discord-card {
+    color: rgb(92 107 192);
+}
+.twitter-card {
+    color: rgb(85 172 238);
+}
+
+.about-div {
+    font-family: 'Ubuntu', sans-serif;
+    background-color: black;
+    text-align: center;
+    color: white;
+    padding: 20px;
+}
+.about-div h4 {
+    margin: 0 0 10px 0;
+}
+.about-div p {
+    margin: 0;
+}
+
+
+.footer-hr{
+    margin: 0;
+    width: 50%;
+    background-color: white;
+    border-width: 0;
+    text-align: center;
+}
+
